kustomize/jelly-stack/emby/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: emby
  labels:
    app: emby
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
      annotations:
        instrumentation.opentelemetry.io/inject-dotnet: "true"
        sidecar.opentelemetry.io/inject: "true"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - aloy
      containers:
      - name: emby
        image: lscr.io/linuxserver/emby:latest    
        ports:
        - name: emby
          containerPort: 8096
        resources:
          limits:
            gpu.intel.com/i915: "2"
        #livenessProbe:
        #  httpGet:
        #    path: /
        #    port: 8096
        #  initialDelaySeconds: 30
        #  periodSeconds: 60
        #  failureThreshold: 3
        #readinessProbe:
        #  httpGet:
        #    path: /
        #    port: 8096
        #  initialDelaySeconds: 240
        #  periodSeconds: 30
        #  failureThreshold: 3
        volumeMounts:
        - name: emby-data
          mountPath: /config
        - name: emby-metadata
          mountPath: /config/metadata/
        - name: emby-cache
          mountPath: /config/cache/
        - name: videos
          mountPath: /data/videos/
          readOnly: true
        - name: emby-transcode
          mountPath: /transcode
      volumes:
      - name: emby-data
        persistentVolumeClaim:
          claimName: emby-data
      - name: emby-metadata
        nfs:
          server: 192.168.253.250
          path: /export/nfs-server/emby/metadata/
      - name: emby-cache
        nfs:
          server: 192.168.253.250
          path: /export/nfs-server/emby/cache/
      - name: videos
        nfs:
          server: 192.168.253.250
          path: /export/data/videos/
      - name: emby-transcode
        emptyDir:
          medium: Memory
          sizeLimit: 4Gi
