kustomize/jelly-stack/emby/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.11
  selector:
    app: emby
  type: LoadBalancer
  ports:
    - port: 8096
      targetPort: emby
